--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
+    "docx": "^5.0.2",
     "mammoth": "^1.4.9",
     "materialize-css": "^1.0.0-rc.2",
     "react": "^16.13.0",
